--- a/style.css
+++ b/style.css
@@ -1,46 +1,46 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__image {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
     
-  .aaa {
+  .header {
       text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.add-section__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.add-section__task-wrapper {
   display: flex;
 }
 
@@ -50,7 +50,8 @@ ul {
 }
 
 li,
-h3 {
+.incomplete-section__title,
+.complete-section__title {
   list-style: none;
 }
 
@@ -74,7 +75,8 @@ button:hover {
 }
 
 /* Heading */
-h3,
+.incomplete-section__title,
+.complete-section__title,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
