--- a/style.css
+++ b/style.css
@@ -42,25 +42,35 @@
 
 .add-section__task-wrapper {
   display: flex;
+  padding-top: 20px;
+
 }
 
-ul {
+.incomplete-section__tasks,
+.complete-section__tasks {
   margin: 0;
   padding: 0px;
 }
 
-li,
+.task,
+.add-section__title,
 .incomplete-section__title,
 .complete-section__title {
   list-style: none;
 }
 
-input,
-button {
+.add-section__task,
+.add-section__add-button,
+.task__checkbox,
+.task__input,
+.task__edit-button,
+.task__delete-button {
   outline: none;
 }
 
-button {
+.add-section__add-button,
+.task__edit-button,
+.task__delete-button {
   background: none;
   border: 0px;
   color: #888;
@@ -70,14 +80,17 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.add-section__add-button:hover,
+.task__edit-button:hover,
+.task__delete-button:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
+.add-section__title,
 .incomplete-section__title,
 .complete-section__title,
-label[for="new-task"] {
+.add-section__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +100,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.add-section__task,
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -100,22 +114,23 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.add-section__task:focus,
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-section__title {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-section__task {
   width: 318px;
 }
 
   /* Task list */
-li {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -124,51 +139,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.task  {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+.task__input {
   width: 226px;
 }
 
-button.delete img {
+.task__delete-button__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task__delete-button__image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.complete-section__tasks > .task > .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__input {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.editMode > .task__input {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.editMode > .task__label {
   display: none;
 }
